product-app-yml/product-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  selector:
    matchLabels:
      app: product-service
  replicas: 3
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service-container
          image: ram1uj/k8s-product-app:latest
          ports:
            - containerPort: 8080
