product-app-yml/cart-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: cart-service
