product-app-yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /api/carts
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 80
